# datafoundry

./: .env.example  .gitignore  .npmrc  LICENSE  README.md  README_zh.md  TOKENIZER_CACHING.md  TUI_IMPLEMENTATION_SUMMARY.md  deploy.sh  mkdocs.yml  package-lock.json  package.json  todo_list.md  tsconfig.base.json  tsconfig.build.json
.codegraph/: daemon.pid
services/datalink/: .gitignore  LICENSE.txt  README.md  README_zh.md  datalink_config.example.json  pyproject.toml
services/datalink/docs/: DESIGN.md  INTERFACE.md  README.md
services/datalink/docs/pipeline/: 01-connector.md  02-extractor.md  03-profiler.md  04-inferrer.md  05-mapper.md  06-storage-and-retrieval.md  07-pipeline-orchestration.md
services/datalink/evaluate/bird/cursor/: eval.config.example.json  eval_common.py  eval_grade.py  eval_run.py
services/datalink/src/datalink/: __init__.py  config.py
services/datalink/src/datalink/api/: __init__.py  deps.py  server.py
services/datalink/src/datalink/builder/: __init__.py  pipeline.py
services/datalink/src/datalink/cli/: main.py
services/datalink/src/datalink/connector/: base.py  database.py  file.py
services/datalink/src/datalink/extractor/: __init__.py  tabular.py
services/datalink/tests/: conftest.py  test_builder.py  test_cli.py  test_connector.py  test_credential.py  test_datafoundry_integration.py  test_extractor.py  test_ids.py  test_inferrer.py  test_mapper.py  test_models.py  test_profiler.py  test_retrieval.py  test_sql_ident.py  test_storage.py
services/datalink/tests/test_data/: orders.csv  transactions.csv  users.csv
(+646 files in other folders)
