[project]
name = "datalink"
version = "0.1.0"
description = "A data-focused knowledge graph system that accelerates agent understanding of data"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "DataLink Team" },
]

dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "sqlalchemy>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "mcp>=1.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dbconnect = [
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.2.0",
]
vec-embedding = [
    "modelscope>=1.38.0",
    "sglang[all]>=0.5.2",
]
vec-search = [
    "sqlite-vec>=0.1.6",
]
eval = [
    "cursor-sdk>=0.1.9",
]
all = [
    "datalink[dbconnect,vec-search,eval]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
datalink = "datalink.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datalink"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "real_llm: CLI integration test requiring a configured LLM API (skipped when no key)",
]
